Sorting, filtration and pagination done for Item