@@ -4,6 +4,8 @@ package com.example.tma_warehouse.services.item;
 import com.example.tma_warehouse.models.item.Item;
 import org.springframework.data.jpa.domain.Specification;
 
+import java.math.BigDecimal;
+
 public class ItemSpecification {
 
     public static Specification<Item> itemCategoryContains(String category) {
@@ -11,33 +13,34 @@ public class ItemSpecification {
             if (category == null) {
                 return criteriaBuilder.isTrue(criteriaBuilder.literal(true));
             }
-            return criteriaBuilder.like(criteriaBuilder.lower(root.get("category")), "%" + category.toLowerCase() + "%");
+            return criteriaBuilder.like(criteriaBuilder.lower(root.get("itemGroup")), "%" + category.toLowerCase() + "%");
         };
     }
 
-    public static Specification<Item> priceGreaterThanOrEqual(Double priceFrom) {
+    public static Specification<Item> priceGreaterThanOrEqual(BigDecimal priceFrom) {
         return (root, query, criteriaBuilder) -> {
             if (priceFrom == null) {
                 return criteriaBuilder.isTrue(criteriaBuilder.literal(true));
             }
-            return criteriaBuilder.greaterThanOrEqualTo(root.get("startingPrice"), priceFrom);
+            return criteriaBuilder.greaterThanOrEqualTo(root.get("priceWithoutVat"), priceFrom);
         };
     }
 
-    public static Specification<Item> priceLessThanOrEqual(Double priceTo) {
+    public static Specification<Item> priceLessThanOrEqual(BigDecimal priceTo) {
         return (root, query, criteriaBuilder) -> {
             if (priceTo == null) {
                 return criteriaBuilder.isTrue(criteriaBuilder.literal(true));
             }
-            return criteriaBuilder.lessThanOrEqualTo(root.get("startingPrice"), priceTo);
+            return criteriaBuilder.lessThanOrEqualTo(root.get("priceWithoutVat"), priceTo);
         };
     }
     public static Specification<Item> hasStatus(String status) {
         return (root, query, criteriaBuilder) -> {
-            if (status == null || status.isBlank()) {
-                return criteriaBuilder.isTrue(criteriaBuilder.literal(true)); // Jeśli status jest pusty, nie filtrujemy po nim
+            if (status == null || status.trim().isEmpty()) {
+                return criteriaBuilder.conjunction(); // No filtering condition
             }
-            return criteriaBuilder.equal(root.get("status"), status.trim());
+            // Using lower case for both for case-insensitive comparison
+            return criteriaBuilder.equal(criteriaBuilder.lower(root.get("status")), status.toLowerCase().trim());
         };
     }
 
@@ -47,6 +50,15 @@ public class ItemSpecification {
                 return criteriaBuilder.isTrue(criteriaBuilder.literal(true)); // Jeśli lokalizacja magazynowa jest pusta, nie filtrujemy po niej
             }
             return criteriaBuilder.like(criteriaBuilder.lower(root.get("storageLocation")), "%" + storageLocation.toLowerCase().trim() + "%");
+        };
+    }
+
+    public static Specification<Item> nameContains(String name) {
+        return (root, query, criteriaBuilder) -> {
+            if (name == null || name.isEmpty()) {
+                return criteriaBuilder.conjunction();
+            }
+            return criteriaBuilder.like(criteriaBuilder.lower(root.get("itemName")), "%" + name.toLowerCase() + "%");
         };
     }
 
